fixed overflow problem on many tasks

--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body {
 
 .tasks {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-content: start;
     align-items: flex-start;
     flex-wrap: wrap;
     flex-grow: 1;
